# rideshare-simulation-platform

./: .checkov.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  CONTEXT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
analytics/superset/: CONTEXT.md  README.md  SUPERSET_REQUIREMENTS.md  SUPERSET_SPECIFICATION.yaml  database-connections.md  docker-entrypoint.sh  pyproject.toml  schema_inventory.yaml  superset-init-entrypoint.sh  superset_config.py
analytics/superset/dashboards/: README.md  associate_charts.py  bronze_queries.py  check_databases.py  cleanup_superset.py  create_bronze_pipeline_dashboard.py  create_demand_analysis_dashboard.py  create_driver_performance_dashboard.py  create_operations_dashboard.py  create_operations_dashboard_v2.py  create_revenue_analytics_dashboard.py  create_silver_quality_dashboard.py  debug_dashboard.py  demand-analysis.json  driver-performance.json  fix_dashboard_charts.py  fix_metadata.py  gold_queries.py  import_dashboards.py  operations-dashboard.json  operations.json  provision_dashboards.py  revenue-analytics.json  setup_database_connection.py  silver_queries.py  superset_client.py
analytics/superset/provisioning/: __init__.py  __main__.py  client.py  exceptions.py  provisioner.py  retry.py  table_checker.py  validators.py
analytics/superset/scripts/: calculate_zone_centroids.py  export-dashboards.sh
analytics/superset/tests/: __init__.py  conftest.py  test_all_dashboards.py  test_client.py  test_dashboards.py  test_operations_dashboard.py  test_provisioner.py  test_retry.py
control-panel-api/: pyproject.toml
control-panel-api/src/: auth.py  dependencies.py  main.py  redis_subscriber.py  settings.py  websocket.py
control-panel-api/src/models/: __init__.py  agents.py  metrics.py  simulation.py
control-panel-api/src/routes/: agents.py  metrics.py  simulation.py
control-panel-api/tests/: conftest.py  test_agent_creation.py  test_authentication.py  test_fastapi_app.py  test_metrics.py  test_redis_fanout.py  test_simulation_control.py  test_websocket.py
databricks/: README.md  __init__.py  pyproject.toml  requirements.txt
databricks/config/: __init__.py  kafka_config.py
databricks/jobs/: optimize_gps_pings.py
databricks/notebooks/: __init__.py  bronze_driver_profiles_stream.py  bronze_driver_status_stream.py  bronze_gps_pings_stream.py  bronze_payments_stream.py  bronze_ratings_stream.py  bronze_rider_profiles_stream.py  bronze_streaming_setup.py  bronze_surge_updates_stream.py
databricks/tests/: __init__.py  test_bronze_gps_pings.py  test_bronze_profiles.py  test_bronze_remaining_tables.py  test_bronze_streaming_setup.py  test_bronze_trip_events.py
databricks/utils/: __init__.py  streaming_utils.py
quality/great-expectations/: CONTEXT.md  README.md  pyproject.toml  requirements.txt  run_checkpoint.py
quality/great-expectations/gx/: CONTEXT.md  great_expectations.yml
quality/great-expectations/tests/: test_gold_expectations.py  test_silver_expectations.py
schemas/lakehouse/: CONTEXT.md  DELTA_FEATURES.md  README.md  pyproject.toml
schemas/lakehouse/config/: __init__.py
schemas/lakehouse/schemas/: CONTEXT.md  __init__.py  bronze_tables.py  dlq_schema.py
schemas/lakehouse/scripts/: enable_delta_features.py
schemas/lakehouse/tests/: test_bronze_schemas.py  test_delta_features.py
services/airflow/: CONTEXT.md  README.md  pyproject.toml  requirements.txt
services/airflow/config/: connections.yaml
services/airflow/dags/: CONTEXT.md  bronze_init_dag.py  dbt_transformation_dag.py  delta_maintenance_dag.py  dlq_monitoring_dag.py  streaming_jobs_dag.py  superset_provisioning_dag.py
services/airflow/logs/: .gitkeep
services/airflow/tests/: CONTEXT.md  test_dbt_transformation_dag.py  test_delta_maintenance_dag.py  test_dlq_monitoring_dag.py  test_ge_validation_dag.py  test_streaming_jobs_dag.py  test_superset_provisioning_dag.py
services/dbt/: .gitignore  CONTEXT.md  README.md  dbt_project.yml  insert_anomaly_test_data.py  insert_bronze_data.py  insert_test_data_direct.sql  profiles.yml  pyproject.toml  recreate_bronze_tables.py  seed_and_build_pipeline.py  setup_all_bronze_tables.py
services/dbt/macros/: CONTEXT.md  delta_source.sql  empty_source_guard.sql  generate_schema_name.sql
services/dbt/models/: CONTEXT.md  overview.md
services/dbt/seeds/: zones.csv
services/dbt/tests/: anomaly_models_schema.yml  test_anomalies_all_union.sql  test_dim_drivers_scd_type2.sql  test_dim_payment_methods_scd_type2.sql  test_dim_riders_current_state.sql  test_dim_time_attributes.sql  test_documentation_completeness.py  test_gps_outlier_detection.sql  test_impossible_speed_detection.sql  test_zombie_driver_detection.sql
services/spark-streaming/: CONTEXT.md  README.md  pyproject.toml  requirements-test.txt
services/spark-streaming/config/: __init__.py  delta_write_config.py  kafka_config.py
services/spark-streaming/framework/: CONTEXT.md  base_streaming_job.py
services/spark-streaming/jobs/: CONTEXT.md  __init__.py  bronze_ingestion_high_volume.py  bronze_ingestion_low_volume.py  driver_profiles_streaming_job.py  driver_status_streaming_job.py  gps_pings_streaming_job.py  high_volume_streaming_job.py  low_volume_streaming_job.py  multi_topic_streaming_job.py  payments_streaming_job.py  ratings_streaming_job.py  rider_profiles_streaming_job.py  surge_updates_streaming_job.py  trips_streaming_job.py
services/spark-streaming/tests/: conftest.py  test_bronze_ingestion_high_volume.py  test_bronze_ingestion_low_volume.py  test_checkpoint_recovery.py  test_delta_write_config.py  test_dlq_handling.py  test_gps_streaming.py  test_high_volume_streaming_job.py  test_ingestion_metadata.py  test_integration.py  test_low_volume_streaming_job.py  (+4 more)
services/stream-processor/: CONTEXT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
simulation/: pyproject.toml
simulation/src/: fare.py  main.py  payment.py  rating.py  settings.py  trip.py
simulation/tests/: conftest.py  factories.py  test_settings.py
(+1734 files in other folders)
