[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-integration-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "testcontainers[kafka,redis,postgres]==4.0.0",
    "httpx==0.27.2",
    "websockets==14.1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: Integration tests (slower, external dependencies)",
]
