[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-integration-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "testcontainers[kafka,redis,postgres]==4.0.0",
    "httpx==0.27.2",
    "websockets==14.1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v",
    "--tb=short",
    "--maxfail=5",
]
markers = [
    "integration: Integration tests (slower, external dependencies)",
    "feature_journey: Feature journey tests (FJ-001 through FJ-007)",
    "data_flow: Data flow tests (DF-001, DF-002)",
    "cross_phase: Cross-phase integration tests (XP-001 through XP-005)",
    "external_integration: External service integration tests (EI-001 through EI-003)",
    "regression: Regression tests (REG-001 through REG-003)",
]

# Timeout settings (requires pytest-timeout package)
# timeout = 120  # Default 120 seconds per test
# timeout_method = "thread"

[tool.black]
line-length = 100
target-version = ['py313']
