[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-integration-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[kafka,redis,postgres]==4.0.0",
    "httpx==0.27.2",
    "websockets==14.1",
    "boto3>=1.35.0",
    "confluent-kafka>=2.6.0",
    "PyHive>=0.7.0",
    "thrift>=0.16.0",
    "redis>=5.0.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v",
    "--tb=short",
    "--maxfail=5",
]
markers = [
    "integration: Integration tests (slower, external dependencies)",
    "feature_journey: Feature journey tests (FJ-001 through FJ-007)",
    "data_flow: Data flow tests (DF-001, DF-002)",
    "cross_phase: Cross-phase integration tests (XP-001 through XP-005)",
    "external_integration: External service integration tests (EI-001 through EI-003)",
    "regression: Regression tests (REG-001 through REG-003)",
]

# Timeout settings (requires pytest-timeout package)
# timeout = 120  # Default 120 seconds per test
# timeout_method = "thread"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
