[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-control-panel-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "redis==7.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.27.2",
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests (fast, isolated)",
]
