[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-simulation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "simpy==4.1.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.45",
    "h3==4.3.1",
    "confluent-kafka==2.12.2",
    "redis==7.1.0",
    "httpx==0.27.2",
    "jsonschema==4.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "types-redis==4.6.0.20241004",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
