[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rideshare-simulation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "simpy==4.1.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.45",
    "h3==4.3.1",
    "confluent-kafka==2.12.2",
    "redis==7.1.0",
    "httpx==0.28.1",
    "polyline==2.0.2",
    "jsonschema==4.25.1",
    "shapely==2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "types-redis==4.6.0.20241004",
    "respx==0.21.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "slow: Slow-running tests",
]

[tool.black]
line-length = 100
target-version = ['py313']
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["simulation"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "simulation"

[[tool.mypy.overrides]]
module = [
    "simpy.*",
    "confluent_kafka.*",
    "h3.*",
    "polyline.*",
    "respx.*",
]
ignore_missing_imports = true
