[project]
name = "great-expectations-rideshare"
version = "0.1.0"
description = "Great Expectations data quality validation for rideshare"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
exclude = ["tests/"]

# great_expectations has no type stubs available
[[tool.mypy.overrides]]
module = ["great_expectations", "great_expectations.*"]
ignore_missing_imports = true
