[project]
name = "lakehouse-schemas"
version = "0.1.0"
description = "PySpark schemas for lakehouse Bronze layer"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
exclude = ["tests/"]

# pyspark and delta have no type stubs available
[[tool.mypy.overrides]]
module = ["pyspark", "pyspark.*", "delta", "delta.*"]
ignore_missing_imports = true
