[project]
name = "airflow-rideshare"
version = "0.1.0"
description = "Airflow DAGs for rideshare data pipeline"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true

# These libraries have no type stubs or are not installed in CI
[[tool.mypy.overrides]]
module = [
    "pyhive",
    "pyhive.*",
    "airflow",
    "airflow.*",
]
ignore_missing_imports = true
