[project]
name = "airflow-rideshare"
version = "0.1.0"
description = "Airflow DAGs for rideshare data pipeline"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true

# These libraries have no type stubs or are not installed in CI
# provisioning module is mounted at runtime in Docker container
[[tool.mypy.overrides]]
module = [
    "duckdb",
    "duckdb.*",
    "deltalake",
    "deltalake.*",
    "airflow",
    "airflow.*",
    "provisioning",
    "provisioning.*",
]
ignore_missing_imports = true
