[project]
name = "spark-streaming"
version = "0.1.0"
description = "Spark Streaming jobs for Bronze layer ingestion"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "-ra"]
markers = [
    "integration: marks tests as integration tests (require Docker services)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
explicit_package_bases = true
