[project]
name = "stream-processor"
version = "0.1.0"
description = "Kafka to Redis stream processor for rideshare simulation"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
explicit_package_bases = true
mypy_path = "."
packages = ["src"]

# These libraries have no type stubs or are not installed in CI
[[tool.mypy.overrides]]
module = [
    "confluent_kafka",
    "confluent_kafka.*",
    "uvicorn",
    "uvicorn.*",
    "fastapi",
    "fastapi.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true
