[project]
name = "stream-processor"
version = "0.1.0"
description = "Kafka to Redis stream processor for rideshare simulation"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
    "types-confluent-kafka>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
explicit_package_bases = true
mypy_path = "."
packages = ["src"]
